Add backend project update endpoint
Squash merge PR #226
